make mark as read api, changes in available shift api and bug fixing

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1333,6 +1333,8 @@ table.dataTable tbody tr{
 }
 .staff-img img{
     width: 100%;
+    object-fit: cover;
+    height: 100%;
 }
 .img-prevarea.staff-img{
     width: 90px;
